Fix overflow bug

--- a/css/general.css
+++ b/css/general.css
@@ -41,6 +41,7 @@ body {
   font-weight: 400;
   line-height: 1.6;
   color: #281e15;
+  overflow-x: hidden;
 }
 
 .container {
