--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ SECTION HERO
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 95vh;
+  min-height: 91rem;
   margin-bottom: 9.6rem;
   position: relative;
 }
